--- a/School-canteen-Ver-1.0/Shared/navbar.html
+++ b/School-canteen-Ver-1.0/Shared/navbar.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+      <a href="#!" class="brand-logo"><i class="material-icons">local_pizza</i>Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
         <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
