--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -4,8 +4,8 @@
       <a href="#!" class="brand-logo"><i class="medium material-icons">local_dining</i>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">remove_shopping_cart</i></a></li>
-        <li><a href="collapsible.html"><i class="material-icons">add_shopping_cart</i></a></li>
+        <li><a href="badges.html"><i class="material-icons">add_shopping_cart</i></a></li>
+        <li><a href="collapsible.html">Food</i></a></li>
         <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
       </ul>
     </div>
