--- a/re_stock_food.html
+++ b/re_stock_food.html
@@ -2,23 +2,17 @@
 <html>
 	% include('shared/navbar.html')
 	% include('shared/head.html')
-
-
+	
 	<div class="row">
-		%for food in food_info:
 		<div class="col s12 m4">
 			<div class="card blue-grey darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">{{food.food_name}}</span>
-					<p>Number left: {{food.food_num}}</p>
+					<span class="card-title">Thanks for re-stocking some food!</span>
+					<p></p>
 				</div>
 				<div class="card-action">
-					<a href="/purchase_food/{{food.id}}">Buy Food</a>
-					<a href="/re_stock_food/{{food.id}}">Re-Stock Food</a>
+					<a href="card">Back to food</a>
 				</div>
 			</div>
 		</div>
-		%end
 	</div>
-	
- 
