--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,11 +1,11 @@
 <DOCTYPE html>
 <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo"><i class="medium material-icons">local_dining</i>
+      <a href="#!" class="brand-logo">canteen logo will be here</i>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
         <li><a href="badges.html"><i class="material-icons">add_shopping_cart</i></a></li>
-        <li><a href="/card">Food</i></a></li>
+        <li><a href="/card"><i class="material-icons">local_dining</i></a></li>
         <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
       </ul>
     </div>
