--- a/re_stock_food.html
+++ b/re_stock_food.html
@@ -11,7 +11,7 @@
 					<p></p>
 				</div>
 				<div class="card-action">
-					<a href="card">Back to food</a>
+					<a href="/card">Back to food</a>
 				</div>
 			</div>
 		</div>
