--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">canteen logo will be here</i>
+      <a href="/index" class="brand-logo">canteen logo will be here</i>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
         <li><a href="badges.html"><i class="material-icons">add_shopping_cart</i></a></li>
