--- a/re_stock_food.html
+++ b/re_stock_food.html
@@ -7,11 +7,11 @@
 		<div class="col s12 m4">
 			<div class="card blue-grey darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">Thanks for re-stocking some food!</span>
-					<p></p>
+					<span class="card-title">You re-sticked some food!</span>
+					<p>Thanks for that</p>
 				</div>
 				<div class="card-action">
-					<a href="/card">Back to food</a>
+					<a href="/card">Back to shopping</a>
 				</div>
 			</div>
 		</div>
