--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,6 +1,6 @@
 <DOCTYPE html>
 <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper" style="background-color:#23A79B;">
       <a href="/index" class="brand-logo">canteen logo will be here</i>
       <ul class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
