--- a/card.html
+++ b/card.html
@@ -12,6 +12,7 @@
 					<span class="card-title">{{food.food_name}}</span>
 					<p>Number left: {{food.food_num}}</p>
 					<p>Price: {{food.food_price}}</p>
+					<p>Number of items sold: {{food.food_sold}}</p>
 				</div>
 				<div class="card-action" style="text-align:center;" >
 					
