--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,12 +1,9 @@
 <DOCTYPE html>
 <nav>
     <div class="nav-wrapper" style="background-color:#23A79B;">
-      <a href="/index" class="brand-logo">canteen logo will be here</i>
+      <a href="index" class="brand-logo">School canteen</i>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">add_shopping_cart</i></a></li>
         <li><a href="/card"><i class="material-icons">local_dining</i></a></li>
-        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
       </ul>
     </div>
 </nav>
