--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <div class="row">
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
+        <div class="card-content white-text" style="text-align:center;" >
           <span class="card-title">Home page</span>
-          <p>This is the home page for the School canteen, at this canteen website, you can buy food from the school <br> but if you are staff you can re-stock the food </p>
+          <p>This is the home page for the School canteen, at this canteen website, you can buy food from the school <br> but if you are staff you can re-stock the food aswell </p>
         </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+        <div class="card-action" style="text-align:center;" >
+          <a href="card">Go to food</a>
         </div>
       </div>
     </div>
