--- a/re_stock_food.html
+++ b/re_stock_food.html
@@ -6,11 +6,11 @@
 	<div class="row">
 		<div class="col s12 m4">
 			<div class="card blue-grey darken-1">
-				<div class="card-content white-text">
+				<div class="card-content white-text" style="text-align:center;" >
 					<span class="card-title">Thanks for re-stocking some food!</span>
 					<p></p>
 				</div>
-				<div class="card-action">
+				<div class="card-action" style="text-align:center;" >
 					<a href="/card">Back to food</a>
 				</div>
 			</div>
