--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <nav>
     <div class="nav-wrapper" style="background-color:#23A79B;">
-      <a href="index" class="brand-logo">School canteen</i>
+      <a href="/index" class="brand-logo">School canteen</i>
       <ul class="right hide-on-med-and-down">
         <li><a href="/card"><i class="material-icons">local_dining</i></a></li>
       </ul>
