--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <div class="row">
     <div class="col s12 m6">
+	<div class="card"style="background-color:#DB2929;">
+				<div class="card-content white-text" style="text-align:center;" >
       <div class="card blue-grey darken-1">
         <div class="card-content white-text" style="text-align:center;" >
           <span class="card-title">Home page</span>
