--- a/re_stock_food.html
+++ b/re_stock_food.html
@@ -5,6 +5,8 @@
 	
 	<div class="row">
 		<div class="col s12 m4">
+		<div class="card"style="background-color:#DB2929;">
+				<div class="card-content white-text" style="text-align:center;" >
 			<div class="card blue-grey darken-1">
 				<div class="card-content white-text" style="text-align:center;" >
 					<span class="card-title">Thanks for re-stocking some food!</span>
